fix layout issue with treatments

--- a/_sass/_treatments.scss
+++ b/_sass/_treatments.scss
@@ -6,7 +6,7 @@
   }
   .row {
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
     margin-bottom: 3.2rem;
     @media only screen and (max-width: $bp-medium) {
       flex-direction: column;
@@ -33,8 +33,7 @@
       box-sizing: border-box;
       border: 2px solid $color-grey-light2;
 
-
-      transition: border .2s;
+      transition: border 0.2s;
 
       &:hover {
         border: 2px solid $color-action;
@@ -56,7 +55,7 @@
 
       @media only screen and (max-width: $bp-mobile) {
         margin-top: 1.6rem;
-        margin-bottom: .8rem;
+        margin-bottom: 0.8rem;
       }
     }
 
